# pixie

./: .dockerignore  .gitignore  CHANGELOG.md  Containerfile  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  cicd.yaml  docs.yml
cijoe/configs/: netboot-pc.toml  test-pxe-flash-always.toml  test-pxe-flash.toml  test-pxe-inventory.toml  test-pxe-nbdboot.toml  test-pxe-ramboot.toml  test-pxe-tui.toml  test-pxe.toml  test-usb-ventoy.toml  usbboot-pc.toml
cijoe/scripts/: live_build.py  pixie_ipxe_build.py  pixie_wheel_stage.py  pxe_flash_stage.py  pxe_inventory_stage.py  pxe_prepare.py  pxe_ramboot_stage.py  pxe_run_chain_test.py  usb_iso_build.py  usb_iso_verify.py  usb_ventoy_guest_start.py  usb_ventoy_stage.py
cijoe/tasks/: netboot-pc.yaml  test-pxe-flash-always.yaml  test-pxe-flash.yaml  test-pxe-inventory.yaml  test-pxe-nbdboot.yaml  test-pxe-ramboot.yaml  test-pxe-tui.yaml  test-pxe.yaml  test-usb-ventoy.yaml  usbboot-pc.yaml
docs/: audit.md
docs/src/: boot-modes.md  concepts.md  conf.py  deployment.md  hardware-quirks.md  index.md  quickstart.md  releases.md
docs/tooling/: README.md  pyproject.toml
docs/tooling/src/pixie_docs/: __init__.py  cli.py
pixie-media/: README.md
pixie-media/auxiliary/: ipxe-embed.ipxe  ipxe-local-general.h
pixie-media/live-build/auto/: config
pixie-media/live-build/config/archives/: backports.list.binary  backports.list.chroot
pixie-media/live-build/config/hooks/normal/: 0500-pixie-install.hook.chroot  0500-pixie-skip-bootloader-menu.hook.binary  0600-pixie-r8125-dkms.hook.chroot  0700-pixie-clock-from-http.hook.chroot  0700-pixie-nbdboot-init.hook.chroot  0700-pixie-ramboot-init.hook.chroot  0800-pixie-ssh-live.hook.chroot  0900-pixie-enable-services.hook.chroot  0980-pixie-apt-validate.hook.chroot
pixie-media/live-build/config/includes.chroot/etc/: issue  motd
pixie-media/live-build/config/includes.chroot/etc/initramfs-tools/hooks/: pixie-nbdboot  pixie-ramboot
pixie-media/live-build/config/includes.chroot/etc/initramfs-tools/scripts/: ramboot
pixie-media/live-build/config/includes.chroot/etc/modprobe.d/: zz-pixie-blacklist-nouveau.conf
pixie-media/live-build/config/includes.chroot/etc/profile.d/: pixie-version.sh
pixie-media/live-build/config/includes.chroot/etc/systemd/system/: pixie-banner-early.service  pixie-banner-late.service  pixie-banner-mid.service  pixie-clock-from-http.service  pixie-images-discover.service  pixie-on-tty1.service  pixie-usb-grow.service  var-lib-pixie-images.mount
pixie-media/live-build/config/includes.chroot/etc/udev/rules.d/: 70-pixie-realtek-2g5-offloads.rules
pixie-media/live-build/config/package-lists/: pixie-base.list.chroot  pixie-flash.list.chroot  pixie-nbdboot.list.chroot  pixie-ramboot.list.chroot
pixie-media/live-build/config/preferences/: backports.pref.binary  backports.pref.chroot
src/pixie/: __init__.py  _partition.py  _util.py  disks.py  flash.py  images.py  oras.py  tui_catalog.py
src/pixie/catalog/: __init__.py  _fetcher.py  _live_env.py  _routes.py  _schema.py  _store.py  catalog.toml
src/pixie/deploy/: __init__.py  _main.py  _templates.py
src/pixie/events/: __init__.py  _kinds.py  _log.py  _routes.py
src/pixie/exports/: __init__.py  _routes.py  _store.py  _supervisor.py
src/pixie/machines/: __init__.py  _routes.py  _store.py
src/pixie/pivot/: __init__.py  nbdboot
src/pixie/pxe/: __init__.py  _renderer.py  _routes.py
src/pixie/tftp/: __init__.py  _supervisor.py
src/pixie/tui/: __init__.py  _app.py
src/pixie/web/: __init__.py  _auth.py  _bind_preview.py  _images.py  _inventory.py  _overlay_bind.py  _overlays.py  _settings_store.py  _table_state.py  main.py
src/pixie/web/_templates/: catalog.html  catalog_detail.html  dashboard.html  events.html  exports.html  image_detail.html  images.html  layout.html  live_env.html  login.html  machine_detail.html  machines.html  overlays.html  settings.html
src/pixie/web/_templates/_partials/: page_description.html  recent_events.html  table_helpers.html
src/pixie/web/_templates/ipxe/: bootstrap.j2  exit.j2  nbdboot.j2  pixie-live-env.j2  ramboot.j2  unavailable.j2
tests/: conftest.py  test_auth.py  test_catalog_api.py  test_catalog_seed.py  test_deploy_unit.py  test_event_kinds.py  test_events_unit.py  test_exports_api.py  test_exports_unit.py  test_fetch_progress.py  test_healthz.py  test_images_ui.py  test_live_env_fetch.py  test_machines_unit.py  test_overlays_ui.py  test_pivot.py  test_pxe_plan_json.py  test_schema.py  test_settings.py  test_ui_pages.py  test_web_bind_preview.py  test_web_inventory.py
tests/integration/: conftest.py  test_catalog_fetch.py  test_deploy.py  test_exports.py  test_inventory.py  test_pxe.py  test_tftp.py
(+12 files in other folders)
