[project]
name = "pixie-docs"
version = "0.5.11"
description = "Documentation build tooling for the pixie project"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Simon A. F. Lund", email = "os@safl.dk" }]
license = "GPL-3.0-only"
dependencies = [
    "sphinx>=8",
    "myst-parser[linkify]>=4",
    "sphinx-copybutton>=0.5",
    "sphinx-autobuild>=2024.10",
    "furo>=2024.8",
]

[project.scripts]
pixie-docs-serve = "pixie_docs.cli:serve"
pixie-docs-build-html = "pixie_docs.cli:build_html"
pixie-docs-build-pdf = "pixie_docs.cli:build_pdf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pixie_docs"]
